--- a/egzs1.html
+++ b/egzs1.html
@@ -10,6 +10,6 @@
     <h1 style="color: blueviolet;">nerede dönüyor bu meret</h1>
     <h2 style="color: yellow;">nasıl githuba gidiyor</h2>
     <h3 style="color: tomato;">bunlar biribiriyle nasıl ilişkili oluyor</h3>
-    <h4 style="color: teal;">anlamıyorumm</h4>
+    <h4 style="color: teal;">artık anlıyorum</h4>
 </body>
 </html>
