--- a/wierd/index.html
+++ b/wierd/index.html
@@ -6,7 +6,9 @@
     <title>hello wierd</title>
 </head>
 <body>
-    hello wierd
-    
+    hello wierd <br><br><br>
+    <img width="100" height="90" src="https://avatars.mds.yandex.net/get-pdb/1337215/4e31925e-db40-45db-82e8-5edb26b90cb6/s1200?webp=false" align="left">
+ <p>Doğadaki usta kimyagerlerden bir tanesi de Bezuar keçisidir. İsmini de bu özelliği nedeni ile almıştır. "Bezuar" ismi, Farsça'da ilaç anlamına gelen bir kelimeden türemiştir. 
+     Bezuar keçisi ne zaman bir yılan tarafından ısırılsa, hemen yaşadığı çevrede yetişen sütleğen bitkisi türlerinden birini yemeye başlar. Bu son derece hayret verici bir davranıştır. Çünkü gerçekten de sütleğen bitkisinin içindeki sıvıda bulunan "Öforbon" maddesi kana karışan yılan zehirni etkisiz hale getirmektedir. Bu canlı, kendi kendini tedavi etme konusunda uzmandır.</p>
 </body>
 </html>
