--- a/wierd/index.html
+++ b/wierd/index.html
@@ -3,12 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="styesheet" type="text/css" href="index.css">
     <title>hello wierd</title>
 </head>
 <body>
-    hello wierd <br><br><br>
-    <img width="100" height="90" src="https://avatars.mds.yandex.net/get-pdb/1337215/4e31925e-db40-45db-82e8-5edb26b90cb6/s1200?webp=false" align="left">
- <p>Doğadaki usta kimyagerlerden bir tanesi de Bezuar keçisidir. İsmini de bu özelliği nedeni ile almıştır. "Bezuar" ismi, Farsça'da ilaç anlamına gelen bir kelimeden türemiştir. 
-     Bezuar keçisi ne zaman bir yılan tarafından ısırılsa, hemen yaşadığı çevrede yetişen sütleğen bitkisi türlerinden birini yemeye başlar. Bu son derece hayret verici bir davranıştır. Çünkü gerçekten de sütleğen bitkisinin içindeki sıvıda bulunan "Öforbon" maddesi kana karışan yılan zehirni etkisiz hale getirmektedir. Bu canlı, kendi kendini tedavi etme konusunda uzmandır.</p>
+    <header>
+    <nav>
+       <a href="about.html">About</a>
+       <a href="index.html">Home</a>
+       <a href="biography.html">Biography</a>
+    </nav>
+     <h1>wierd</h1> <br>
+     <h2>Hard Rock for the Digital Age</h2>
+    </header>
+
+<div>
+    <img src="wi logo.png" alt="logowierd">
+</div>
+
+<div>
+    <p>Hard rock or heavy roc is a loosely defined subgenre of rock music typified by a heavy use of aggressive vocals, distorted electric guitars, bass guitar, and drums, sometimes accompanied with keyboards. It began in the mid-1960s with the garage, psychedelic and blues rock movements. Hard rock developed into a major form of popular music in the 1970s, with bands such as the Who, Boston, Led Zeppelin, Deep Purple, Aerosmith, Kiss, Queen, AC/DC and Van Halen. During the 1980s, some hard-rock bands moved away from their hard-rock roots and more towards pop rock</p>
+</div>
+
+<div>
+    <img src="logo2.png">
+</div>
+
+
+<footer>
+    copyright 2020
+</footer>
+
+    </body>
+
 </body>
 </html>
