--- a/egzs1.html
+++ b/egzs1.html
@@ -3,13 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bu neyin kafası</title>
+    <title>pedding</title>
+    <link rel="stylesheet" type="text/css" href="egzs1.css">
+
 </head>
 <body>
 
-    <h1 style="color: blueviolet;">nerede dönüyor bu meret</h1>
-    <h2 style="color: yellow;">nasıl githuba gidiyor</h2>
-    <h3 style="color: tomato;">bunlar biribiriyle nasıl ilişkili oluyor</h3>
-    <h4 style="color: teal;">artık anlıyorum</h4>
+    <div class="ornek">
+
+        <div class="res" ><img src="wierd/oner.png" > </div>
+    
+    <div class="bir">
+        <p> “Gri göğün altında, tozla kaplı geniş bir ovadayım. Ne bir yol, ne bir çimen, ne bir diken, ne bir ısırgan otu… Kamburları çıkmış vaziyette yürüyen bir grup insana rastladım.Sırtlarında  bir un çuvalı ya da kömür torbası ağırlığında birer canavar(1) taşıyorlardı. Ama bu canavarlar öylesine bir yük değillerdi. </p>
+    </div>
+
+    <div class="bir"> 
+        <p>Tersine hamallarını sarıp sarmalayan güçlü kaslarıyla korkunç pençelerini insanların göğüslerine saplamışlardı. Ürküten başları antik çağ savaşçılarının düşmanı korkutmak için giydikleri miğferler gibi insanların başının üzerinden aşıyordu</p>
+    </div>
+
+    <div class="ikin">  
+    <img src="wierd/halo.png">
+    </div> 
+    <div class="ikin">
+       <p>İnsanlardan birine sordum, nereye gittiklerini öğrenmek istedim. Bir şey bilmiyordu. Ne o, ne de ötekiler. Ama bir yere gidiyorlardı muhakkak çünkü karşı konulmaz bir yürüme ihtiyacı içindeydiler.Şaşırtıcı bir şey: Bu yolcuların hiç biri hallerinden şikâyetçi görünmüyordu. </p>
+    </div>
+    <div class="ikin">  
+       <p>Boyunlarına asılan, sırtlarına yapışan bu canavarı bedenlerinin bir parçası gibi kabullenmişlerdi. Yorgun ve ciddi yüzlerde bir umutsuzluk yoktu. Sürekli umud etmeye mahkûm insanların teslim olmuş edasıyla melankolik bir göğün altında, en az o gökyüzü kadar kederli bir arazide ayakları toza batmış olarak ilerliyorlardı.</p>
+    </div>
+    </div>
 </body>
 </html>
