--- a/wierd/index.html
+++ b/wierd/index.html
@@ -3,22 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="styesheet" type="text/css" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" type="text/css" href="index.css">
     <title>hello wierd</title>
 </head>
 <body>
     <header>
-    <nav>
-       <a href="about.html">About</a>
-       <a href="index.html">Home</a>
-       <a href="biography.html">Biography</a>
-    </nav>
-     <h1>wierd</h1> <br>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="albums.html">Albums</a>
+            <a href="concerts.html">Concerts</a>
+            <a href="contact.html">Contact</a>
+         </nav>
+
+ 
      <h2>Hard Rock for the Digital Age</h2>
     </header>
 
 <div>
     <img src="wi logo.png" alt="logowierd">
+    
 </div>
 
 <div>
@@ -26,7 +31,8 @@
 </div>
 
 <div>
-    <img src="logo2.png">
+    <img src="logo2.png" width=800px>
+    <img src="alt.png" alt="bla" width="800px">
 </div>
 
 
